feat: support custom rules via custom/custom.list and fix workflow trigger paths

--- a/.github/workflows/generate-routeros-scripts.yml
+++ b/.github/workflows/generate-routeros-scripts.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - 'site-list.mjs'
       - 'main.mjs'
+      - 'custom/**'
       - '.github/workflows/generate-routeros-scripts.yml'
 
 jobs:
